# fred-xpbd

./: .gitignore  CMakeLists.txt  lines.sh
inc/fxpbd/: builtin_constraints.hpp  constraint.hpp  particle.hpp  system.hpp
inc/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/: base_test.cpp  soft_body_test.cpp  youtube_shorts.cpp
